syntax = "proto3";
package fingerprint;

option go_package = "github.com/rpajarola/dedup/fingerprint";

message FingerprintTestCase {
	string name = 1;
	string source_file = 2;
	repeated string comment = 3;
	bool skip = 4;
	bool want_err = 5;

	repeated WantFingerprint want_fingerprint = 6;
	EXIFTestCase exif = 7;
	XMPTestCase xmp = 8;
	ImgPHashTestCase img_phash = 9;
	VideoPHashTestCase video_phash = 10;
	ChecksumTestCase checksum = 11;
}

message WantFingerprint {
	repeated string comment = 1;
	string want_kind = 2;
	string want_hash = 3;
	int32 want_quality = 4;
}

message EXIFTestCase {
	repeated string comment = 1;
	bool skip = 2;
	string want_camera_model = 3;
	string want_camera_serial = 4;
	string want_photo_id = 5;
	bool want_unique_photo_id = 6;
}

message XMPTestCase {
	repeated string comment = 1;
	bool skip = 2;
	string want_document_id = 3;
}

message ImgPHashTestCase {
	repeated string comment = 1;
	bool skip = 2;
	string want_azr_hash = 3;
	string want_nr90_hash = 4;
}

message VideoPHashTestCase {
	repeated string comment = 1;
	bool skip = 2;
	string want_ricop_hash = 3;
}

message ChecksumTestCase {
	repeated string comment = 1;
	bool skip = 2;
	string crc32 = 3;
	string verified_crc32 = 4;
	string md5 = 5;
	string verified_md5 = 6;
	string sha1 = 7;
	string verified_sha1 = 8;
}
